# MsgX

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  MsgXConfig.cmake.in  README.md  setup.py  subscriber.py
c++/include/msgx/: def.h  device_specifics.h  kwargs.h  message.h
c++/include/msgx/comms/: comms.h  zmq.h
c++/include/msgx/conversion/: all.h  anylist.h  anylist_interface.h  array.h  common.h  convertible.h  eigen.h  list.h  mapping_interface.h  primitives.h  special.h
c++/include/msgx/dispatcher/: builder_adopt_dispatcher.h  opaque_dispatcher.h
c++/include/msgx/opaque_item/: bindable_item.h  item.h  mappings.h  opaque_union.h
c++/msgx/: CMakeLists.txt
c++/src/msgx/: CMakeLists.txt  kwargs.c++  message.c++
c++/src/msgx/comms/: zmq.c++
c++/src/msgx/conversion/: anylist_interface.c++
c++/src/msgx/dispatcher/: builder_adopt_dispatcher.c++
c++/src/msgx/opaque_item/: bindable_item.c++  item.c++  mappings.c++
c++/src/msgx_capnp/: CMakeLists.txt  ndarray.capnp
demo_project/: CMakeLists.txt  py_sub_example.py
include/msgx/: capnp_conversion.h  def.h  kwargs.h  message.h
include/msgx/comms/: comms.h  zmq.h
include/msgx/conversion/: all.h  array.h  common.h  list.h  primitives.h
include/msgx/opaque_item/: bindable_item.h  composed_items.h  conversion.h  item.h  items.h  mappings.h  mappings_template.h  ndarray_dispatcher.h  opaque_dispatcher.h  primitive_items.h
python/: __init__.py  __main__.py  asyncio.py  constants.py  deserialise.py  msg_definitions.py  receiver.py  reciever.py
python/context_manager/: info_label.py  progress_bar.py  types.py
scripts/plotmsg_dash/: _impl.py
src/: CMakeLists.txt
src/msgx/: CMakeLists.txt  main.cpp  message.h  msgx.h
src/msgx/comms/: comms.h  zmq.h
src/msgx/opaque_item/: bindable_item.cpp  mappings.cpp
src/msgx_capnp/: CMakeLists.txt  msgx.capnp
src/plotmsg/: CMakeLists.txt
src/protobuf_msg/: CMakeLists.txt
tests/: CMakeLists.txt  msgx_test.c++  test_any_list.c++  test_common.h  test_eigen.c++  test_kwargs.c++  test_lists.c++  test_ndarray.c++  test_primitives.c++  test_primitives_lists.c++
